Refactor package structure by moving domain classes to a new package hierarchy